tests/ivg/invalid/path_size_out_of_range.ivg
format IVG-3
BOUNDS 0,0,10,10
PEN black width:1 dash:0.1,0.1
PATH [line 0,0,1000000,0]
